--- a/.github/workflows/prod_ecosolutions.yml
+++ b/.github/workflows/prod_ecosolutions.yml
@@ -33,7 +33,11 @@ jobs:
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+        run: |
+          cd Eco-Solutions/
+          zip release.zip ./* -r
+          cd ..
+          mv Eco-Solutions/release.zip .
 
       - name: Upload artifact for deployment jobs
         uses: actions/upload-artifact@v4
