--- a/.github/workflows/prod_ecosolutions.yml
+++ b/.github/workflows/prod_ecosolutions.yml
@@ -34,10 +34,8 @@ jobs:
 
       - name: Zip artifact for deployment
         run: |
-          cd Eco-Solutions/
           zip release.zip ./* -r
-          cd ..
-          mv Eco-Solutions/release.zip .
+          release.zip .
 
       - name: Upload artifact for deployment jobs
         uses: actions/upload-artifact@v4
