--- a/.github/workflows/prod_ecosolutions.yml
+++ b/.github/workflows/prod_ecosolutions.yml
@@ -32,6 +32,11 @@ jobs:
         
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
 
+       - name: Cleaning testing files
+        run: |
+          rm db.sqlite3
+          rm .env
+
       - name: Zip artifact for deployment
         run: |
           zip release.zip ./* -r
