--- a/.github/workflows/prod_ecosolutions.yml
+++ b/.github/workflows/prod_ecosolutions.yml
@@ -38,9 +38,7 @@ jobs:
           rm .env
 
       - name: Zip artifact for deployment
-        run: |
-          zip release.zip ./* -r
-          release.zip .
+        run: zip release.zip ./* -r
 
       - name: Upload artifact for deployment jobs
         uses: actions/upload-artifact@v4
