--- a/.github/workflows/prod_ecosolutions.yml
+++ b/.github/workflows/prod_ecosolutions.yml
@@ -30,12 +30,24 @@ jobs:
       - name: Install dependencies
         run: pip install -r requirements.txt
         
-      # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
+      - name: Install npm dependencies
+        run: |
+          npm ci
+          npm install cypress
 
+      - name: Run local server
+        run: |
+          python manage.py migrate
+          python manage.py runserver &
+          sleep 5
+          npx cypress run
+        
       - name: Cleaning testing files
         run: |
+          rm cypress.config.js
+          rm -rf cypress
+          rm -rf node_modules
           rm db.sqlite3
-          rm .env
 
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
