--- a/.github/workflows/prod_ecosolutions.yml
+++ b/.github/workflows/prod_ecosolutions.yml
@@ -28,7 +28,8 @@ jobs:
           source venv/bin/activate
       
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: |
+          pip install -r requirements.txt
         
       - name: Install npm dependencies
         run: |
@@ -92,4 +93,3 @@ jobs:
         with:
           app-name: 'EcoSolutions'
           slot-name: 'Production'
-          
